breakup sum and dot product benchmarks